# PowerSkills

./: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
powerskills/: main.py
powerskills/api/: __init__.py
powerskills/api/routes/: __init__.py  auth.py  orchestration.py  skill.py
powerskills/core/: __init__.py  config.py
powerskills/core/models/: __init__.py  auth.py  common.py  orchestration.py  skill.py  user.py
powerskills/core/services/: __init__.py  auth.py  orchestration.py  skill.py
powerskills/db/: __init__.py  seekdb.py
powerskills/tests/integration/: test_api.py
powerskills/tests/unit/: test_auth.py  test_config.py  test_models.py  test_orchestration_service.py  test_skill_service.py
